--- a/index.html
+++ b/index.html
@@ -158,9 +158,26 @@
 
   </div>
 
+  <!--Stats-->
+  <section>
+    
+   <div class="stats-Container" id="statsContainer">
+    <div class="stats-mountain" id="statsMountain"></div>
+    <div class="stats-clouds" id="statsClouds"></div>
+
+    <div class="stats-data">
+      <div class="counter-desc"><span class="counter" data-target="5000">0</span>Happy Guests</div>
+      <div class="counter-desc"><span class="counter" data-target="15">0</span>Profissional Guides</div>
+      <div class="counter-desc"><span class="counter" data-target="25">0</span>Expeditions Offered</div>
+    </div>
+
+   </div>
+
+  </section>
 
 
-    <script src="js/script.js"></script>
+  
+    <script type="module" src="js/script.js"></script>
 
 </body>
 </html>
