--- a/index.html
+++ b/index.html
@@ -175,6 +175,48 @@
 
   </section>
 
+   <!-- Journeys -->
+   <section class="journeys container">
+    <h2>Which journey do you choose?</h2>
+    <div class="journey-grid">
+      <div class="journey-card">
+        <img src="assets/images/Everest4.avif" alt="Mount Everest" loading="lazy">
+        <span>Mount Everest</span>
+      </div>
+      <div class="journey-card">
+        <img src="assets/images/K2.avif" alt="K2" loading="lazy">
+        <span>K2</span>
+      </div>
+      <div class="journey-card">
+        <img src="assets/images/Everest base camp.avif" alt="Everest Base Camp" loading="lazy">
+        <span>Everest Base Camp</span>
+      </div>
+      <div class="journey-card">
+        <img src="assets/images/K2 base camp.avif" alt="K2 Base Camp" loading="lazy">
+        <span>K2 Base Camp</span>
+      </div>
+         <div class="journey-card">
+        <img src="assets/images/Lhotse.avif" alt="Lthose" loading="lazy">
+        <span>Lhotse</span>
+      </div>
+         <div class="journey-card">
+        <img src="assets/images/Fuji.avif" alt="Mount Fuji" loading="lazy">
+        <span>Mount Fuji</span>
+      </div>
+        <div class="journey-card">
+        <img src="assets/images/Chamonix.avif" alt="Chamonix" loading="lazy">
+        <span>Chamonix</span>
+      </div>
+         <div class="journey-card">
+        <img src="assets/images/Fuji.avif" alt="Mount Fuji" loading="lazy">
+        <span>Mount Fuji</span>
+      </div>
+      
+
+    </div>
+   </section>
+
+
 
   
     <script type="module" src="js/script.js"></script>
