--- a/index.html
+++ b/index.html
@@ -211,10 +211,19 @@
         <img src="assets/images/Fuji.avif" alt="Mount Fuji" loading="lazy">
         <span>Mount Fuji</span>
       </div>
-      
-
     </div>
    </section>
+
+   <div class="container-btn">
+    <button class="btn-custom">See all</button>
+   </div>
+
+   <!-- Custom -->
+    <section class="custom-tours">
+      <h2 class="pb-18">Want something tailor-made?</h2>
+      <button class="btn-custom">Contact Us</button>
+
+    </section>
 
 
 
