--- a/index.html
+++ b/index.html
@@ -261,7 +261,113 @@
      </section>
 
      <!-- GALLERYYYYY -->
+     <section>
 
+      <div class="gallery-container">
+
+        <button class="gallery-arrow arrow-left"> <img src="assets/images/arrowleft.svg" alt="Arrow left"> </button>
+        <button class="gallery-arrow arrow-right"> <img src="assets/images/arrowright.svg" alt="Arrow right"> </button>
+
+
+        <div class="photo-gallery">
+          
+          <div class="photo-item" data-photo-id="01">
+            <img src="assets/images/peopleclimbing.avif" alt="People Climbing">
+            <div class="photo-overlay">
+              <button class="heart-btn" onclick="toggleLike('01')">
+                <svg class="heart-icon" viewBox="0 0 24 24">
+                <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5 
+                         2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08
+                         C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5
+                         C22,12.27 18.6,15.36 13.45,20.04L12,21.35Z"/>
+              </svg>
+              </button>
+              <div class="likes-counter"></div>
+            </div>
+          </div>
+
+          <div class="photo-item" data-photo-id="02">
+            <img src="assets/images/couplesnow.avif" alt="couple snow">
+            <div class="photo-overlay">
+              <button class="heart-btn" onclick="toggleLike('02')">
+                <svg class="heart-icon" viewBox="0 0 24 24">
+                <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5 
+                         2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08
+                         C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5
+                         C22,12.27 18.6,15.36 13.45,20.04L12,21.35Z"/>
+              </svg>
+              </button>
+              <div class="likes-counter"></div>
+            </div>
+          </div>
+
+           <div class="photo-item" data-photo-id="03">
+            <img src="assets/images/dogsnow.avif" alt="dog snow">
+            <div class="photo-overlay">
+              <button class="heart-btn" onclick="toggleLike('03')">
+                <svg class="heart-icon" viewBox="0 0 24 24">
+                <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5 
+                         2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08
+                         C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5
+                         C22,12.27 18.6,15.36 13.45,20.04L12,21.35Z"/>
+              </svg>
+              </button>
+              <div class="likes-counter"></div>
+            </div>
+          </div>
+
+           <div class="photo-item" data-photo-id="04">
+            <img src="assets/images/personclibimg.avif" alt="person snow">
+            <div class="photo-overlay">
+              <button class="heart-btn" onclick="toggleLike('04')">
+                <svg class="heart-icon" viewBox="0 0 24 24">
+                <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5 
+                         2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08
+                         C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5
+                         C22,12.27 18.6,15.36 13.45,20.04L12,21.35Z"/>
+              </svg>
+              </button>
+              <div class="likes-counter"></div>
+            </div>
+          </div>
+
+            
+
+          <div class="photo-item" data-photo-id="05">
+            <img src="assets/images/snoworangesky.avif" alt="sky orange">
+            <div class="photo-overlay">
+              <button class="heart-btn" onclick="toggleLike('05')">
+                <svg class="heart-icon" viewBox="0 0 24 24">
+                <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5 
+                         2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08
+                         C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5
+                         C22,12.27 18.6,15.36 13.45,20.04L12,21.35Z"/>
+              </svg>
+              </button>
+              <div class="likes-counter"></div>
+            </div>
+          </div>
+
+            <div class="photo-item" data-photo-id="06">
+            <img src="assets/images/snowlightpinksky.avif" alt="sky pink">
+            <div class="photo-overlay">
+              <button class="heart-btn" onclick="toggleLike('06')">
+                <svg class="heart-icon" viewBox="0 0 24 24">
+                <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5 
+                         2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08
+                         C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5
+                         C22,12.27 18.6,15.36 13.45,20.04L12,21.35Z"/>
+              </svg>
+              </button>
+              <div class="likes-counter"></div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+     </section>
 
 
 
